--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "homepage": "",
   "keywords": [
-    "n8n-community-node-package"
+    "n8n-community-node-package","n8n-nodes-pic-search"
   ],
   "author": {
     "name": "zilong-tech",
